# dr-cognee

./: .gitignore  README.md  TESTING.md  pyproject.toml
docs/notes/: 2026-07-07-deep-research-acceptance.md  2026-07-07-tool-graph-pilot.md
docs/skills/deep-graph-research/: SKILL.md
docs/skills/tool-graph/: SKILL.md
docs/superpowers/plans/: 2026-07-07-deep-research-cognee.md
docs/superpowers/specs/: 2026-07-07-deep-research-cognee-design.md
docs/viz/: 00-framework.md  01-data-inventory.md  02-usecase-candidates.md  03-synthesis.md  04-selection.md  05-critique-response.md  06-reflection.md  log.md
docs/viz/case-studies/: evidence-first-readers.md  graph-explorers.md  oversight-cockpits.md
docs/viz/critique/: feasibility-critique.md  ux-critique.md
docs/viz/reports/: drc-atlas.html  drc-dossier.html  drc-mission.html  reflection.html  research-process.html
docs/viz/usecases/: drc-atlas.md  drc-dossier.md  drc-mission.md
scripts/: smoke_live.py
src/dr_cognee/: __init__.py  cli.py  cognee_client.py  distill.py  docs_pull.py  firecrawl_ops.py  ingest.py  models.py  sources.py  workspace.py
tests/: test_distill.py  test_docs_pull.py  test_firecrawl_parsing.py  test_ingest_payloads.py  test_models.py  test_sources.py
tests/fixtures/: firecrawl_search.json
